# MALintent

./: .gitignore  Cargo.toml  README.md  intent_template.json  run.sh  run_multiple_apps.sh
.github/workflows/: rust.yml
apk_analyzer/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
apk_analyzer/src/main/kotlin/com/ammaraskar/intent/fuzz/: ApkAnalyzer.kt  IntentExtraUsageTreeVisitor.kt  IntentReceiver.kt  IntentTemplate.kt  Main.kt
apk_analyzer/src/test/kotlin/com/ammaraskar/intent/fuzz/: ApkAnalyzerTest.kt  IntentReceiverTest.kt
content_provider/: README.md
content_provider/app/: build.gradle
content_provider/app/src/main/: AndroidManifest.xml
content_provider/app/src/main/java/org/gts3/jnifuzz/contentprovider/: MainActivity.kt  UriPermissionManager.kt
content_provider/app/src/main/res/layout/: activity_main.xml
content_provider/app/src/main/res/values/: strings.xml  themes.xml
content_provider/app/src/main/res/values-night/: themes.xml
content_provider/gradle/wrapper/: gradle-wrapper.properties
eval/: collect_edgecount_data.sh  compute_metrics.py  generate_configs.sh  tmp.sh
patches/: ActivityThread.patch
src/: adb_device.rs  adb_executor.rs  intent_generator.rs  intent_input.rs  intent_mutator.rs  main.rs  socket_coverage_observer.rs  util.rs
test_coverage_agent/: README.md  test_server.py
